--- a/keycloak-stack.yaml
+++ b/keycloak-stack.yaml
@@ -29,9 +29,9 @@ services:
       - 5432:5432
 
   keycloak:
-    image: antonaag
+    image: antonaag/keycloak:12.0.4
     deploy:
-      replicas: 2
+      replicas: 1
       restart_policy:
         condition: any
       placement:
